# gattaca

./: CMakeLists.txt  README.md  build.sh  optimization_doc.md  run_benchmark.sh  run_tests.sh
Ant_Mania/: CMakeLists.txt  README.md  README_OPTIMIZED.md  ant_mania.cpp  ant_mania.h  ant_mania_base.cpp  ant_mania_benchmark.cpp  ant_mania_main.cpp  ant_mania_multi.cpp  ant_mania_single.cpp  benchmark.cpp  build.sh  main.cpp  run_benchmark.sh  run_tests.sh
Ant_Mania/build_simple/: CMakeCache.txt  Makefile  ant_mania  cmake_install.cmake
Ant_Mania/test/: CMakeLists.txt  README.md  test_ant_mania.cpp
include/: ant_mania.h
src/: benchmark.cpp
test/: CMakeLists.txt  test_ant_mania.cpp
